--- a/app/data/src/main/AndroidManifest.xml
+++ b/app/data/src/main/AndroidManifest.xml
@@ -4,10 +4,8 @@
     >
 
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:allowBackup="false"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true" />
 
 </manifest>
