--- a/app/presentation/src/main/AndroidManifest.xml
+++ b/app/presentation/src/main/AndroidManifest.xml
@@ -4,10 +4,10 @@
 
     <application
         android:name="com.guahoo.presentation.MainApplication"
-        android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:allowBackup="false"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/icon"
+        android:roundIcon="@drawable/round_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.ComposeApplication" >
     <activity android:name="com.guahoo.presentation.MainActivity"
