--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,7 @@ lifecycleViewmodelCompose = "2.8.6"
 material3 = "1.3.0"
 navigationComposeVersion = "2.8.2"
 okhttp = "5.1.0"
+osmbonuspack = "6.9.0"
 osmdroidAndroid = "6.1.13"
 osmdroidBonuspack = "6.9.0"
 osmdroidMapsforge = "6.1.11"
@@ -33,6 +34,7 @@ navigationCompose = "2.8.2"
 appcompat = "1.7.0"
 material = "1.12.0"
 ui = "1.7.3"
+uiToolingPreviewAndroid = "1.7.4"
 
 [libraries]
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activityCompose" }
@@ -70,6 +72,7 @@ kotlinx-metadata-jvm = { module = "org.jetbrains.kotlinx:kotlinx-metadata-jvm", 
 locationtech-jts-core = { module = "org.locationtech.jts:jts-core", version.ref = "jtsCoreVersion" }
 material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+osmbonuspack = { module = "com.github.MKergall:osmbonuspack", version.ref = "osmbonuspack" }
 osmdroid-android = { module = "org.osmdroid:osmdroid-android", version.ref = "osmdroidAndroid" }
 osmdroid-bonuspack = { module = "org.osmdroid:osmdroid-bonuspack", version.ref = "osmdroidBonuspack" }
 osmdroid-mapsforge = { module = "org.osmdroid:osmdroid-mapsforge", version.ref = "osmdroidMapsforge" }
@@ -80,6 +83,7 @@ androidx-navigation-compose = { group = "androidx.navigation", name = "navigatio
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 ui = { module = "androidx.compose.ui:ui", version.ref = "ui" }
+androidx-ui-tooling-preview-android = { group = "androidx.compose.ui", name = "ui-tooling-preview-android", version.ref = "uiToolingPreviewAndroid" }
 
 [plugins]
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
