--- a/app/presentation/src/main/AndroidManifest.xml
+++ b/app/presentation/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
-    <activity android:name="com.guahoo.presentation.MainActivity"
+    <activity android:name="com.guahoo.presentation.ui.MainActivity"
         android:exported="true">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
