--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,8 @@ activityCompose = "1.9.2"
 composeBom = "2024.09.03"
 lifecycleViewmodelCompose = "2.8.6"
 material3 = "1.3.0"
+mockk = "1.13.5"
+mockkAndroid = "1.13.5"
 navigationComposeVersion = "2.8.2"
 okhttp = "5.1.0"
 osmbonuspack = "6.9.0"
@@ -71,6 +73,8 @@ kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-c
 kotlinx-metadata-jvm = { module = "org.jetbrains.kotlinx:kotlinx-metadata-jvm", version.ref = "kotlinxMetadataJvm" }
 locationtech-jts-core = { module = "org.locationtech.jts:jts-core", version.ref = "jtsCoreVersion" }
 material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
+mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
+mockk-android = { module = "io.mockk:mockk-android", version.ref = "mockkAndroid" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 osmdroid-android = { module = "org.osmdroid:osmdroid-android", version.ref = "osmdroidAndroid" }
 osmdroid-bonuspack = { module = "org.osmdroid:osmdroid-bonuspack", version.ref = "osmdroidBonuspack" }
